# clip-llm

./: README.md  pyproject.toml  requirements.txt  setup.py
clipllm/: .xbindkeysrc  bind_keys.py  clipllm.py  main_linux.py  settings.py
src/: bind_keys.py
