[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipllm"
version = "0.1.0"
description = "Descripción corta de clipLLM"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu.correo@example.com"}
]

[project.scripts]
clip-llm = "clipllm.clipllm:main"